--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
     --popover-foreground: 222.2 84% 4.9%;
 
     --primary: 222.2 47.4% 11.2%;
+    --primary-lighter: 222.2 47.4% 18%;
     --primary-foreground: 210 40% 98%;
 
     --secondary: 210 40% 96.1%;
